-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.3, 6.6.2, 6.7.0 Beta3
-
None
-
macOS 14.3.1
MacBook Pro 13-inch, M1, 2020
-
2b14f2e4a (dev), def874737 (6.7), 0d00a9b9c (6.6), bcd2b1912 (tqtc/lts-6.5)
Here is a Qt warning on changing audio input in standard Audio Source example - Examples/<Qt Version>/multimedia/audiosource/
QIODevice::write (AudioInfo): device not open
I suppose it doesn't depend on the platform or multimedia backend, but I reproduce it
stably at least on macOS 14.3.1, with the next steps:
1. Build and run Audio Source example
2. Try to switch audio input, e.g. from built-in "MacBook Pro Microphone" to any other available device (like "ZoomAudioDevice" or "AirPods") or vice-versa.

3. Observe the debug output.
- relates to
-
QTBUG-123023 [Examples] Audio input devices list is not updated when connecting new device
-
- Closed
-
| For Gerrit Dashboard: QTBUG-123045 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 550295,3 | Examples: fix warning on changing device in AudioSource example | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 550460,2 | Examples: fix warning on changing device in AudioSource example | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 550708,2 | Examples: fix warning on changing device in AudioSource example | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 550818,2 | Examples: fix warning on changing device in AudioSource example | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |