Examples: fix warning on changing device in AudioSource example

There was a warning "QIODevice::write (AudioInfo): device not open"
that appeared every time on changing the audio input device. To fix
this, we just need to stop the audio source (m_audioInput) before
closing the I/O device (m_audioInfo).

Fixes: QTBUG-123045
Pick-to: 6.6 6.5
Change-Id: I499d4e5d96e4076ab3c71444a27153b9d7642b02
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 2b14f2e4a96ce7cadb4d7a768172cdec09be9d6e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>